<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samsung.knox.example.kioskmode.MainActivity">

    <TextView
        android:id="@+id/logview_id"
        android:gravity="bottom"
        android:layout_width="320dp"
        android:layout_height="230dp"
        android:textColor="#3F51B5"
        android:background="@drawable/background"
        android:scrollbars="vertical"
        android:paddingLeft="10dp"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginTop="10dp"
        android:layout_below="@id/logview_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/toggleAdminBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/activate_admin" />

            <Button
                android:id="@+id/activateLicenceBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/toggleAdminBtn"
                android:layout_below="@+id/toggleAdminBtn"
                android:text="@string/activate_license" />

            <Button
                android:id="@+id/grantPermissionsBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/toggleAdminBtn"
                android:layout_below="@id/activateLicenceBtn"
                android:text="@string/grant_permissions"/>

            <Button
                android:id="@+id/toggleDefaultKioskBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/toggleAdminBtn"
                android:layout_below="@id/grantPermissionsBtn"
                android:text="@string/toggle_kiosk"/>
            <Button
                android:id="@+id/toggleLogViewBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/toggleAdminBtn"
                android:layout_below="@id/toggleDefaultKioskBtn"
                android:width="200dp"
                android:text="@string/login_view" />

            <Button
                android:id="@+id/toggleCustomKioskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toggleLogViewBtn"
                android:layout_alignStart="@id/toggleLogViewBtn"
                android:width="200dp"
                android:text="@string/toggle_custom_kiosk" />

            <Button
                android:id="@+id/toggleDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toggleCustomKioskButton"
                android:layout_alignStart="@id/toggleCustomKioskButton"
                android:width="200dp"
                android:text="@string/date_time" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>